Fix popup css on Safari.

--- a/apps/comics/templates/comics/reader.css
+++ b/apps/comics/templates/comics/reader.css
@@ -605,8 +605,6 @@ dialog.is-hidden::backdrop {
   opacity: 0;
 }
 .dialog-image {
-    width: 100%;
-    height: 100%;
     max-width: 95vw;
     max-height: 95vh;
     object-fit: contain;
